[gd_scene load_steps=2 format=3 uid="uid://bznq2y3k6hbsh"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_settings")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -140.0
offset_right = 180.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Display Settings"
horizontal_alignment = 1

[node name="ResolutionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FullscreenToggle" type="CheckButton" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ApplyButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

